--- a/Gfycat/src/main/res/values/strings.xml
+++ b/Gfycat/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Gfycat</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+
+    <string name="error_loading_gif">Sorry, this gif could not be loaded via gfycat.</string>
 
 </resources>
