Added basic stats activity

--- a/Gfycat/src/main/res/values/strings.xml
+++ b/Gfycat/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
 
     <string name="error_alternatives">Gfycat failed, load image with</string>
 
+    <string name="you_saved">You have saved</string>
+    <string name="using_gfycat">by using Gfycat!</string>
+
 </resources>
