Added basic stat tracking/output

--- a/Gfycat/src/main/res/values/strings.xml
+++ b/Gfycat/src/main/res/values/strings.xml
@@ -8,6 +8,6 @@
     <string name="error_alternatives">Gfycat failed, load image with</string>
 
     <string name="you_saved">You have saved</string>
-    <string name="using_gfycat">by using Gfycat!</string>
+    <string name="using_gfycat">of bandwidth by using Gfycat!</string>
 
 </resources>
