Polished output for zero savings case

--- a/Gfycat/src/main/res/values/strings.xml
+++ b/Gfycat/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="error_alternatives">Gfycat failed, load image with</string>
 
     <string name="you_saved">You have saved</string>
-    <string name="using_gfycat">of bandwidth by using Gfycat!</string>
+    <string name="diddly_squat">diddly squat</string>
+    <string name="using_gfycat">bandwidth by using Gfycat!</string>
+    <string name="explanation">(Whenever you open a link that leads to a GIF, you should choose to use this app and it\'ll use less bandwidth and load faster!)</string>
 
 </resources>
